Overflow test bugs
Fixes:
Catalog-checkboxes: flex-wrap;
Product cards: price and button are together;
Main navigation: logo position is absolute, focus is visible.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -403,6 +403,7 @@ body {
 /** Header **/
 
 .navigation {
+  position: relative;
   display: flex;
   width: 1170px;
   margin: 0 auto;
@@ -415,8 +416,9 @@ body {
   align-items: center;
   justify-content: start;
   max-width: 700px;
-  margin: 0;
   padding: 0;
+  margin: 0;
+  margin-left: 153px;
   list-style-type: none;
 }
 
@@ -430,6 +432,7 @@ body {
 
 .navigation-item {
   position: relative;
+  margin-top: 12px;
   margin-bottom: 15px;
 }
 
@@ -479,13 +482,24 @@ body {
   padding: 8px 17px;
 }
 
-.logo,
-.logo:hover,
-.logo:focus,
-.logo:active {
-  padding: 0;
+.navigation-item-logo {
+  position: absolute;
+  top: 4px;
+  left: -8px;
+}
+
+.logo {
+  padding: 8px;
   margin: 0;
   margin-right: 16px;
+  box-sizing: border-box;
+  outline: none;
+  box-shadow: none;
+  background-color: transparent;
+}
+
+.logo:hover,
+.logo:active {
   outline: none;
   box-shadow: none;
   background-color: transparent;
@@ -555,7 +569,7 @@ body {
 
 .main-container {
   flex-grow: 1;
-  padding-top: 25px;
+  padding-top: 40px;
 }
 
 .page-container {
@@ -854,6 +868,8 @@ body {
 
 .product-card {
   position: relative;
+  display: flex;
+  flex-direction: column;
   padding-bottom: 28px;
   margin-top: 51px;
   box-sizing: border-box;
@@ -896,8 +912,9 @@ body {
 }
 
 .product-card-price {
-  display: block;
   margin: 0 40px;
+  margin-top: auto;
+  margin-right: 70px;
   word-spacing: 3px;
 }
 
@@ -1380,6 +1397,13 @@ Input::placeholder {
   margin-top: 2px;
 }
 
+.htmlacademy-link {
+  padding-bottom: 1px;
+  color: inherit;
+  text-decoration: none;
+  border-bottom: 1px solid #2d3440;
+}
+
 .contacts-phone:focus,
 .footer-menu-link:focus,
 .html-logo-link:focus,
@@ -1440,7 +1464,6 @@ Input::placeholder {
 /** Catalog **/
 
 .main-inner {
-  margin-top: 2px;
   margin-bottom: 35px;
 }
 
@@ -1677,7 +1700,7 @@ Input::placeholder {
 
 .catalog-filter-list {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
   box-sizing: border-box;
   margin: 0;
   padding: 8px 16px;
